# jmc-poc-nchan

./: .gitignore  Makefile  README.md
backend/: Dockerfile  compose.yml
backend/event-backend/: Cargo.toml  Dockerfile  Makefile  compose.yml
backend/event-backend/src/: main.rs
backend/event-backend/src/infrastructure/: mongo_repo.rs
backend/event-backend/src/models/: event_model.rs
backend/event-backend/src/routes/: mod.rs  ready.rs
backend/event-backend/src/routes/command/: register_new_event.rs
backend/event-backend/src/services/: mod.rs
backend/event-backend/src/services/core/command/: ready.rs
backend/event-backend/src/services/events/command/: mod.rs  register_new_event.rs
backend/event-backend/src/services/events/query/: events.rs
backend/event-backend/src/services/notifications/command/: mod.rs  register_new_subscription.rs
backend/nchan/: nginx.conf
front/: package-lock.json  package.json
front/src/: App.tsx  index.css
front/src/data/: event.ts
front/src/views/: addEvents.tsx  home.tsx  index.tsx  listEvents.tsx
service-worker/: package.json  vite.config.ts
service-worker/certs/: google-chrome-without-ca.sh  localhost-key.pem  localhost.pem
service-worker/public/: service-worker.js
service-worker/src/: App.tsx  service-worker.ts
service-worker/src/components/: ServiceWorkerToggle.tsx
