[package]
edition = "2021"
name = "event-backend"
version = "0.1.0"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = {version = "0.4.39", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.11.5"
mongodb = "3.1.0"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
